# chipzen-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/: CLA.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  dco.yml  leakage-gate.yml  release-javascript.yml  release-python.yml  release-rust.yml
docs/: DEV-MANUAL.md  PORTING-BETWEEN-SDKS.md  QUICKSTART.md
docs/protocol/: POKER-GAME-STATE-PROTOCOL.md  TRANSPORT-PROTOCOL.md
examples/reference-bot/: Dockerfile  README.md  bot.py
examples/reference-bot-js/: README.md  bot.js  package.json
examples/reference-bot-rust/: Cargo.toml  README.md
examples/reference-bot-rust/src/: main.rs
starters/: README.md
starters/javascript/: Dockerfile  README.md  bot.js  package.json
starters/python/: Dockerfile  README.md  bot.py
starters/rust/: Cargo.toml  Dockerfile  README.md
starters/rust/src/: main.rs
