[package]
name = "chipzen-reference-bot-rust"
version = "0.2.0"
edition = "2021"
publish = false
description = "Reference Chipzen bot — non-trivial Rust demonstration"

[[bin]]
name = "reference-bot"
path = "src/main.rs"

[dependencies]
chipzen-bot = "0.2"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
